Rename developer documentation index page, and fix HTML for Linux.

--- a/Documentation/DeveloperDocumentation.html
+++ b/Documentation/DeveloperDocumentation.html
@@ -9,8 +9,8 @@
 <title>Developing for openBVE</title>
 </head>
 <frameset cols="192,*">
-  <frame src="HTML\menu.html" name="menu" frameborder="0" />
-  <frame src="HTML\title.html" name="main" frameborder="0" />
+  <frame src="HTML/menu.html" name="menu" frameborder="0" />
+  <frame src="HTML/title.html" name="main" frameborder="0" />
 </frameset>
 
 <!-- Mirrored from www.trainsimframework.org/develop/index2.html by HTTrack Website Copier/3.x [XR&CO'2010], Sat, 05 May 2012 22:28:34 GMT -->
