Update developer docs for Route.DynamicLight

--- a/Documentation/HTML/route_csv.html
+++ b/Documentation/HTML/route_csv.html
@@ -623,6 +623,20 @@ This command creates one or more preceding or following trains. These other trai
 <hr />
 <br /><table border="0">
 <tr style="height:16"><td></td></tr>
+<tr><td bgcolor="#F0F0F0" style="font-family: monospace;border:1px dotted;color:#808080"><font color="#C00000"><b>Route.DynamicLight</b> <em>Dynamic.XML</em></font></td></tr>
+</table>
+<table style="border:0px none;margin-left:10pt;margin-right:10pt;">
+<tr><td><font color="#808080">
+<b><em>Dynamic.XML</em></b>: A path to a Dynamic Lighting definition XML file.<br />
+</font></td></tr></table>
+This command may be used as an alternative to the <i>Route.AmbientLight</i> , <i>Route.DirectionalLight</i> and <i>Route.LightDirection</i> commands.<br>
+It allows the lighting to be varied using a time-based model, and is described fully on the following page:<br>
+<p style="margin-left: 10px"><a href="route_dynamiclight.html" target="main">Dynamic Lighting</a>
+
+<br /><br /><hr />
+<table border="0">
+<tr style="height:16"><td></td></tr>
+<tr style="height:16"><td></td></tr>
 <tr><td bgcolor="#F0F0F0" style="font-family: monospace;border:1px dotted;color:#808080"><font color="#C00000"><b>Route.AmbientLight</b> <em>RedValue</em>; <em>GreenValue</em>; <em>BlueValue</em></font></td></tr>
 </table>
 <table style="border:0px none;margin-left:10pt;margin-right:10pt;">
