--- a/Documentation/HTML/menu.html
+++ b/Documentation/HTML/menu.html
@@ -21,8 +21,10 @@
 <a href="object_information.html" target="main">Information and tips</a><br />
 <br />
 <b>Routes</b><br />
-<a href="route_csv.html" target="main">The CSV route</a>
-<p style="margin-left: 10px"><a href="route_dynamiclight.html" target="main">Adding Dynamic Lighting</a></p>
+<a href="route_csv.html" target="main">The CSV route</a><br />
+<p style="margin-left: 10px"><a href="route_dynamiclight.html" target="main">Adding Dynamic Lighting</a><br>
+<a href="route_dynamicbackground.html" target="main">Dynamic & Object Based Backgrounds</a></p>
+
 <a href="route_rw.html" target="main">The RW route</a><br />
 <a href="tutorial_ats.html" target="main">Tutorial: Using ATS</a><br />
 <a href="tutorial_atc.html" target="main">Tutorial: Using ATC</a><br />
