Update documentation for Switch sounds
[ci skip]

--- a/documentation/HTML/train_sound_cfg.html
+++ b/documentation/HTML/train_sound_cfg.html
@@ -128,13 +128,14 @@ Assigns a motor sound. The non-negative integer <em>Index</em> represents the in
 <table><tr style="height: 2px;"><td /></tr></table>
 <br /><table border="0">
 <tr style="height:16"><td></td></tr>
-<tr><td bgcolor="#F0F0F0" style="font-family: monospace;border:1px dotted;color:#808080"><font color="#C00000">0 = <em>FileName</em></font></td></tr>
+<tr><td bgcolor="#F0F0F0" style="font-family: monospace;border:1px dotted;color:#808080"><font color="#C00000">Index = <em>FileName</em></font></td></tr>
 </table>
 <table style="border:0px none;margin-left:10pt;margin-right:10pt;">
 <tr><td><font color="#808080">
 
 </font></td></tr></table>
-Played once per axle when the train crosses a pointwork.<br /><br /><hr />
+Assigns a switch sound- These are played once per axle when the train crosses a block containing pointwork. The non-negative integer <em>Index</em> represents the type of switch sound to use. Route developers can choose which flange sound to play for a given piece of track. Please see the page about <a href="information_standards.html">standards</a> for further information.
+<br /><br /><hr />
 <table><tr style="height: 4px;"><td /></tr></table>
 <font color="#0080FF">● [Brake]</font>
 <table style="border:0px none;margin-left:10pt;margin-right:10pt;">
