Add documentation for XML stations, bug in Early request stops
[ci skip]

--- a/documentation/HTML/menu.html
+++ b/documentation/HTML/menu.html
@@ -1,8 +1,6 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
-
-<!-- Mirrored from www.trainsimframework.org/develop/menu.html by HTTrack Website Copier/3.x [XR&CO'2010], Sat, 05 May 2012 22:30:02 GMT -->
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link rel="SHORTCUT ICON" href="../Images/favicon.png" />
@@ -24,7 +22,8 @@
 <a href="route_csv.html" target="main">The CSV route</a><br />
 <p style="margin-left: 10px"><a href="route_dynamiclight.html" target="main">Adding Dynamic Lighting</a><br>
 <a href="route_dynamicbackground.html" target="main">Dynamic & Object Based Backgrounds</a><br>
-<a href="route_marker.html" target="main">Scripted Markers</a></p>
+<a href="route_marker.html" target="main">Scripted Markers</a><br>
+<a href="route_marker.html" target="main">XML Stations & Request Stops</a></p>
 
 <a href="route_rw.html" target="main">The RW route</a><br />
 <a href="tutorial_ats.html" target="main">Tutorial: Using ATS</a><br />
@@ -65,6 +64,4 @@
 <br />
 </font>
 </body>
-
-<!-- Mirrored from www.trainsimframework.org/develop/menu.html by HTTrack Website Copier/3.x [XR&CO'2010], Sat, 05 May 2012 22:30:27 GMT -->
 </html>
