--- a/documentation/HTML/route_csv.html
+++ b/documentation/HTML/route_csv.html
@@ -2136,6 +2136,27 @@ This command places an environmental sound effect at the specified location. The
 
 </font></td></tr></table>
 This command places a bumper. The train can collide with the bumper in both the forward and backward directions. Place this command at the beginning and the end of the route. An object is not automatically created, so use Track.FreeObj to create a visual representation of the bumper if necessary.
+
+<table><tr style="height: 2px;"><td /></tr></table>
+<hr />
+<br /><table border="0">
+<tr style="height:16"><td></td></tr>
+<tr><td bgcolor="#F0F0F0" style="font-family: monospace;border:1px dotted;color:#808080"><font color="#C00000"><b>Track.Destination</b> <em>Type</em>; <em>BeaconStructureIndex</em>; <em>NextDestination</em>; <em>PreviousDestination</em>; <em>TriggerOnce</em>; <font color="green"><em>X</em></font>; <font color="green"><em>Y</em></font>; <em>Yaw</em>; <em>Pitch</em>; <em>Roll</em></font></td></tr>
+</table>
+<table style="border:0px none;margin-left:10pt;margin-right:10pt;">
+<tr><td><font color="#808080">
+<b><em>Type</em></b>: Defines the types of trains for which this destination setter applies: <em>-1</em> for AI trains only, <em>0</em> for all trains and <em>1</em> for the player train only.<br />
+<b><em>BeaconStructureIndex</em></b>: A non-negative integer representing the object to be placed as defined via Structure.Beacon, or -1 to not place any object.<br />
+<b><em>NextDestination</em></b>: An integer representing the destination value set when passing over this beacon in a forwards direction, or <em>-1</em> to disable.<br />
+<b><em>PreviousDestination</em></b>: An integer representing the destination value set when passing over this beacon in a reverse direction, or <em>-1</em> to disable.<br />
+<b><em>TriggerOnce</em></b>: If set to <em>0</em>, this beacon will be triggered by all valid trains which pass over it. If set to <em>1</em>, it will be triggered by the first valid train only.<br />
+<b><font color="green"><em>X</em></font></b>: The X-coordinate at which to place the object, <b>by default</b> measured in <b>meters</b>. The default value is 0.<br />
+<b><font color="green"><em>Y</em></font></b>: The Y-coordinate at which to place the object, <b>by default</b> measured in <b>meters</b>. The default value is 0.<br />
+<b><em>Yaw</em></b>: The angle in degrees by which the object is rotated in the XZ-plane in clock-wise order when viewed from above. The default value is 0.<br />
+<b><em>Pitch</em></b>: The angle in degrees by which the object is rotated in the YZ-plane in clock-wise order when viewed from the left. The default value is 0.<br />
+<b><em>Roll</em></b>: The angle in degrees by which the object is rotated in the XY-plane in clock-wise order when viewed from behind. The default value is 0.
+</font></td></tr></table>
+This command places a special beacon, which sets the destination variable, available for use by plugins and animated objects. The object must have been loaded via Structure.Beacon(<em>BeaconStructureIndex</em>) prior to using this command.<br /><br /><hr />
 </body>
 
 <!-- Mirrored from www.trainsimframework.org/develop/route_csv.html by HTTrack Website Copier/3.x [XR&CO'2010], Sat, 05 May 2012 22:30:55 GMT -->
