New: Add documentation of parameters that something gets caught in the door

--- a/documentation/HTML/route_csv.html
+++ b/documentation/HTML/route_csv.html
@@ -1673,6 +1673,15 @@ The command should be placed at the beginning of the station platform. In order 
 <hr />
 <br /><table border="0">
 <tr style="height:16"><td></td></tr>
+<tr><td bgcolor="#F0F0F0" style="font-family: monospace;border:1px dotted;color:#808080"><font color="#C00000"><b>Track.StationXML</b> <em>FileName.xml</em></font></td></tr>
+</table><br>
+A <em>Track.StationXML</em> command, linking to a single XML file is also supported. <br>
+This command may be used as an alternative to the <i>Track.Sta</i> and <i>Track.Station</i> commands.<br>
+These are fully described on the <a href="route_stationxml.html">the The XML Station Format page...</a><br />
+<hr />
+
+<br /><table border="0">
+<tr style="height:16"><td></td></tr>
 <tr><td bgcolor="#F0F0F0" style="font-family: monospace;border:1px dotted;color:#808080"><font color="#C00000"><b>Track.Stop</b> <em>Direction</em>; <font color="green"><em>BackwardTolerance</em></font>; <font color="green"><em>ForwardTolerance</em></font>; <em>Cars</em></font></td></tr>
 </table>
 <table style="border:0px none;margin-left:10pt;margin-right:10pt;">
