New: Add the function of Input Device Plugin New: Add restriction of notch that driver can handle

--- a/documentation/HTML/train_train_dat.html
+++ b/documentation/HTML/train_train_dat.html
@@ -605,6 +605,22 @@ A non-negative integer indicating how many power notches are available. There sh
 </font></td></tr></table>
 A non-negative integer indicating how many brake notches are available. The value is ignored for trains using automatic air brakes (defined in the #BRAKE section).<br /><br /><table border="0">
 <tr style="height:16"><td></td></tr>
+<tr><td bgcolor="#F0F0F0" style="font-family: monospace;border:1px dotted;color:#808080"><font color="#C00000"><em>DriverPowerNotches</em></font></td></tr>
+</table>
+<table style="border:0px none;margin-left:10pt;margin-right:10pt;">
+<tr><td><font color="#808080">
+
+</font></td></tr></table>
+A non-negative integer representing the number of power notches which a driver can use. These values must be less than <em>PowerNotches</em>.<br /><br /><table border="0">
+<tr style="height:16"><td></td></tr>
+<tr><td bgcolor="#F0F0F0" style="font-family: monospace;border:1px dotted;color:#808080"><font color="#C00000"><em>DriverBrakeNotches</em></font></td></tr>
+</table>
+<table style="border:0px none;margin-left:10pt;margin-right:10pt;">
+<tr><td><font color="#808080">
+
+</font></td></tr></table>
+A non-negative integer representing the number of brake notches which a driver can use. These values must be less than <em>BrakeNotches</em>.<br /><br /><table border="0">
+<tr style="height:16"><td></td></tr>
 <tr><td bgcolor="#F0F0F0" style="font-family: monospace;border:1px dotted;color:#808080"><font color="#C00000"><em>PowerNotchReduceSteps</em></font></td></tr>
 </table>
 <table style="border:0px none;margin-left:10pt;margin-right:10pt;">
