--- a/debian/credits.html
+++ b/debian/credits.html
@@ -81,8 +81,8 @@
 				<a id="translators">Translators</a>
 			</h2>
 			<div>
-				<strong>Marc Riera Irigoyen (Markitus95)</strong>
-				<a href="http://openbve.freeforums.org/memberlist.php?mode=viewprofile&amp;u=988"><img src="common/icon_user.gif" alt="Forum profile" title="Forum profile" /></a><a href="http://www.youtube.com/Markitus95"><img src="common/icon_world.gif" alt="Personal homepage" title="Personal homepage" /></a><a href="mailto:mriera95@gmail.com"><img src="common/icon_email.gif" alt="E-mail" title="E-mail" /></a>
+				<strong>Marc Riera</strong>
+				<a href="http://openbve.freeforums.org/memberlist.php?mode=viewprofile&amp;u=988"><img src="common/icon_user.gif" alt="Forum profile" title="Forum profile" /></a><a href="https://bvebarcelona.cat"><img src="common/icon_world.gif" alt="Personal homepage" title="Personal homepage" /></a>
 				Catalan <br />
 				<strong>Jan Henning (Jan)</strong>
 				<a href="http://openbve.freeforums.org/memberlist.php?mode=viewprofile&amp;u=21"><img src="common/icon_user.gif" alt="Forum profile" title="Forum profile" /></a>
